--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="tabschat">CHATS</string>
     <string name="tabsestados">ESTADOS</string>
     <string name="tabsllamadas">LLAMADAS</string>
+    <string name="token_web_client">adasdasd</string>
 </resources>
